{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 68,
  "lineage": "237df025-1c3a-83d9-1e65-5160c63978c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:internet-gateway/igw-001808873fbcc6a5e",
            "id": "igw-001808873fbcc6a5e",
            "owner_id": "132487645500",
            "tags": {
              "Name": "ig-01"
            },
            "tags_all": {
              "Name": "ig-01"
            },
            "vpc_id": "vpc-0d28de35d7b7e2fca"
          },
          "dependencies": [
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:network-acl/acl-02bc43891bab67dea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-02bc43891bab67dea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "132487645500",
            "subnet_ids": [],
            "tags": {
              "Name": "NACL"
            },
            "tags_all": {
              "Name": "NACL"
            },
            "vpc_id": "vpc-0d28de35d7b7e2fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:route-table/rtb-06546e4ad075f45eb",
            "id": "rtb-06546e4ad075f45eb",
            "owner_id": "132487645500",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-01"
            },
            "tags_all": {
              "Name": "rt-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d28de35d7b7e2fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfbe71a7929d7096",
            "route_table_id": "rtb-06546e4ad075f45eb",
            "subnet_id": "subnet-0686468f16a522625"
          },
          "dependencies": [
            "aws_route_table.Route_table",
            "aws_subnet.subnet",
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:security-group/sg-05ff7c6b09dd5f1f7",
            "description": "Allow SSH and mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ff7c6b09dd5f1f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MYSQL from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH and mysql",
            "name_prefix": "",
            "owner_id": "132487645500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Securitygp"
            },
            "tags_all": {
              "Name": "Securitygp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d28de35d7b7e2fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:subnet/subnet-0686468f16a522625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0686468f16a522625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132487645500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-01"
            },
            "tags_all": {
              "Name": "subnet-01"
            },
            "vpc_id": "vpc-0d28de35d7b7e2fca"
          },
          "dependencies": [
            "aws_vpc.VPC-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132487645500:vpc/vpc-0d28de35d7b7e2fca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0716a5cd909d0b380",
            "default_route_table_id": "rtb-08c638adaa84849b5",
            "default_security_group_id": "sg-0e3d09b83c60760b9",
            "dhcp_options_id": "dopt-0212d0bde7c8d5fe2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d28de35d7b7e2fca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c638adaa84849b5",
            "owner_id": "132487645500",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}